[gd_scene load_steps=22 format=2]

[ext_resource path="res://Actors/Enemies/SpitterPlant/spitter_plant.png" type="Texture" id=1]
[ext_resource path="res://Actors/Enemies/SpitterPlant/SpitterPlant.gd" type="Script" id=2]
[ext_resource path="res://hitboxes/TakeDamageBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://hitboxes/hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Combat/Bullets/Tumblethorn/TumblethornBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Animations/take_damage.tres" type="Animation" id=6]
[ext_resource path="res://Actors/Enemies/SpitterPlant/SpitterPart1.png" type="Texture" id=7]
[ext_resource path="res://Actors/Enemies/SpitterPlant/SpitterPart2.png" type="Texture" id=8]
[ext_resource path="res://Actors/Enemies/SpitterPlant/SpitterPart3.png" type="Texture" id=9]
[ext_resource path="res://Actors/Enemies/SpitterPlant/SpitterPart4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/ParticleSprites/blood/blood.png" type="Texture" id=11]
[ext_resource path="res://Animations/wounded_animation.tres" type="Animation" id=12]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.5, 6 )

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 21.5, 8 )

[sub_resource type="CanvasItemMaterial" id=17]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 1
emission_sphere_radius = 12.56
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 10.89
gravity = Vector3( 0, 300, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0
anim_speed_random = 0.49

[sub_resource type="Animation" id=16]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_bullet"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model/Model:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="SpitterPlant" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
death_spritesheet = [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
hurt_vocalizations = [ "hiss_2" ]
death_vocalization = "hiss_1"
health = 6
can_be_knocked_back = false
bullet_scene = ExtResource( 5 )
bullet_spread = 0.0
max_range = 140.0
max_bullet_speed = 120.0
attack_delay = 60.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -6 )
shape = SubResource( 8 )

[node name="ledge_check_right" type="RayCast2D" parent="."]
position = Vector2( 1, -1 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="ledge_check_left" type="RayCast2D" parent="."]
position = Vector2( -1, -1 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 15, -10 )
shape = SubResource( 9 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 3.5, -8 )
shape = SubResource( 10 )

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Model" type="Node2D" parent="."]
position = Vector2( 12, 6 )

[node name="Model" type="Sprite" parent="Model"]
position = Vector2( -2, -14 )
texture = ExtResource( 1 )
hframes = 9
frame = 3

[node name="EffectsParticles" type="Particles2D" parent="Model"]
material = SubResource( 17 )
position = Vector2( -6, -13 )
z_index = -1
emitting = false
amount = 2
lifetime = 0.5
explosiveness = 0.58
process_material = SubResource( 18 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Model"]
anims/attack = SubResource( 16 )
anims/hurt = SubResource( 14 )
anims/idle = SubResource( 15 )

[node name="EffectsPlayer" type="AnimationPlayer" parent="Model"]
root_node = NodePath("../..")
anims/RESET = SubResource( 11 )
anims/take_damage = ExtResource( 6 )
anims/wounded = ExtResource( 12 )

[node name="PlayerSensor" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 95, 1 )
collision_mask = 2
collide_with_areas = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 32, -15 )

[connection signal="area_entered" from="hurtbox" to="." method="when_hitbox_area_entered"]

[editable path="hurtbox"]
[editable path="hitbox"]
